--- a/medical-examination-assistant/package.json
+++ b/medical-examination-assistant/package.json
@@ -9,7 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@langchain/community": "^1.1.1",
+    "@langchain/core": "^1.1.7",
+    "@langchain/google-genai": "^2.1.2",
+    "@langchain/langgraph": "^1.0.7",
     "groq-sdk": "^0.37.0",
+    "langchain": "^1.2.2",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
