--- a/medical-examination-assistant/package.json
+++ b/medical-examination-assistant/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@langchain/classic": "^1.0.7",
     "@langchain/community": "^1.1.1",
     "@langchain/core": "^1.1.7",
     "@langchain/google-genai": "^2.1.2",
