--- a/medical-examination-assistant/package.json
+++ b/medical-examination-assistant/package.json
@@ -14,11 +14,18 @@
     "@langchain/core": "^1.1.7",
     "@langchain/google-genai": "^2.1.2",
     "@langchain/langgraph": "^1.0.7",
+    "better-sqlite3": "^11.10.0",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "groq-sdk": "^0.37.0",
     "langchain": "^1.2.2",
+    "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.69.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
